Fixation of "Use popover" work (not finished)

--- a/content/ratingwindow.html
+++ b/content/ratingwindow.html
@@ -27,6 +27,7 @@
 		<script type="text/javascript" src="../jquery.js"></script>
 		<script type="text/javascript" src="../wot.js"></script>
 		<script type="text/javascript" src="common.js"></script>
+		<script type="text/javascript" src="../locale.js"></script>
 		<script type="text/javascript" src="ratingwindow.js"></script>
 
 		<style type="text/css">
