Fixes and cleaning from old code/assests

--- a/ratingwindow.html
+++ b/ratingwindow.html
@@ -22,18 +22,17 @@
 
 <html>
 	<head>
-		<script type="text/javascript" src="../jquery.js"></script>
-        <script type="text/javascript" src="../jquery.menu-aim.js"></script>
-		<script type="text/javascript" src="../wot.js"></script>
-		<script type="text/javascript" src="common.js"></script>
-		<script type="text/javascript" src="../locale.js"></script>
-        <script type="text/javascript" src="../keeper.js"></script>
-        <script type="text/javascript" src="../ga_configure.js"></script>
+		<script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="jquery.menu-aim.js"></script>
+		<script type="text/javascript" src="wot.js"></script>
+		<script type="text/javascript" src="content/common.js"></script>
+        <script type="text/javascript" src="keeper.js"></script>
+        <script type="text/javascript" src="ga_configure.js"></script>
 		<script type="text/javascript" src="ratingwindow.js"></script>
 
 		<style type="text/css">
-        @import "../skin/ratingwindow.css";
-        @import "../skin/include/welcometips.css";
+        @import "skin/ratingwindow.css";
+        @import "skin/include/welcometips.css";
 		</style>
 	</head>
 	<body>
@@ -273,6 +272,6 @@
     </div>
 
 </div>
-<script type="text/javascript" src="../ga_init.js"></script>
+<script type="text/javascript" src="ga_init.js"></script>
 	</body>
 </html>
